# diagrams-contrib

./: .gitignore  .travis.yml  CHANGES  CHANGES.markdown  CONTRIBUTORS  LICENSE  README  README.markdown  Setup.hs  diagrams-contrib.cabal  swimunit.README
.github/workflows/: haskell-ci.yml
drv/: BaseDriver.sh  DotmatrixDarkAlphabetDriver.sh  ModuleNameDriver.sh  VGridDriver.sh  VPlotDriver.sh
drv/Diagrams/Swimunit/: BaseDriver.hs  DotmatrixDarkAlphabetDriver.hs  DotmatrixModuleNameDriver.hs  SwimunitModuleNameDriver.hs  VGridDriver.hs  VPlotDriver.hs
src/Diagrams/: Anchors.hs  Lens.hs
src/Diagrams/Color/: HSV.hs  ProcessXKCDColors.hs  XKCD.hs
src/Diagrams/Example/: Logo.hs
src/Diagrams/Layout/: Wrap.hs
src/Diagrams/Swimunit/: Axis.hs  Base.hs  Dotmatrix.hs  Grid.hs  Plot.hs
src/Diagrams/TwoD/: Apollonian.hs  Factorization.hs  Graph.hs  Grid.hs  Sunburst.hs  Tilings.hs
src/Diagrams/TwoD/Layout/: CirclePacking.hs  Constrained.hs  Grid.hs  Tree.hs
src/Diagrams/TwoD/Path/: Boolean.hs  Calligraphic.hs  Follow.hs  IntersectionExtras.hs  IteratedSubset.hs  LSystem.hs  Metafont.hs  Turtle.hs
src/Diagrams/TwoD/Path/Metafont/: Combinators.hs  Internal.hs  Parser.hs  Types.hs
src/Diagrams/TwoD/Path/Turtle/: Aliases.hs  Internal.hs
test/: BTreeTest.hs  BTreeTestPure.hs  FollowTest.hs
tests/: TestSuite.hs
tests/Diagrams/TwoD/Path/MetaFont/: Quickcheck.hs  Tests.hs
tests/Diagrams/TwoD/Path/Turtle/: Tests.hs
travis/: .travis.yml.template
travis/scripts/: before_install.sh  head_branch.py  install-deps.sh  install.sh  script.sh  set_env.sh
