name:                diagrams-contrib
version:             1.4.6
synopsis:            Collection of user contributions to diagrams EDSL
description:         A collection of user contributions for diagrams,
                     an embedded domain-specific language for generation
                     of vector graphics.
homepage:            https://diagrams.github.io/
license:             BSD3
license-file:        LICENSE
author:              Various
maintainer:          Various; see individual modules
Bug-reports:         http://github.com/diagrams/diagrams-contrib/issues
category:            Graphics
build-type:          Simple
cabal-version:       1.18
extra-source-files:  README.markdown, diagrams/*.svg, CONTRIBUTORS
extra-doc-files:     diagrams/*.svg, CHANGES.markdown
tested-with:         GHC ==8.4.4 || ==8.6.5 || ==8.8.4 || ==8.10.7 || ==9.0.2 || ==9.2.8 || ==9.4.8 || ==9.6.6 || ==9.8.2 || ==9.10.1 || ==9.12.1
Source-repository head
  type:     git
  location: http://github.com/diagrams/diagrams-contrib.git

library
  ghc-options:         -Wall
  exposed-modules:     Diagrams.Anchors,
                       Diagrams.Color.HSV,
                       Diagrams.Color.XKCD,
                       Diagrams.Example.Logo,
                       Diagrams.Layout.Wrap,
                       Diagrams.Lens,
                       Diagrams.TwoD.Apollonian,
                       Diagrams.TwoD.Factorization,
                       Diagrams.TwoD.Grid,
                       Diagrams.TwoD.Tilings,
                       Diagrams.TwoD.Sunburst,
                       Diagrams.TwoD.Layout.Constrained,
                       Diagrams.TwoD.Layout.Grid,
                       Diagrams.TwoD.Layout.Tree,
                       Diagrams.TwoD.Layout.CirclePacking,
                       Diagrams.TwoD.Path.Boolean,
                       Diagrams.TwoD.Path.Calligraphic,
                       Diagrams.TwoD.Path.Follow,
                       Diagrams.TwoD.Path.IntersectionExtras
                       Diagrams.TwoD.Path.IteratedSubset,
                       Diagrams.TwoD.Path.LSystem,
                       Diagrams.TwoD.Path.Turtle,
                       Diagrams.TwoD.Path.Turtle.Aliases,
                       Diagrams.TwoD.Path.Turtle.Internal
                       Diagrams.TwoD.Path.Metafont
                       Diagrams.TwoD.Path.Metafont.Types
                       Diagrams.TwoD.Path.Metafont.Internal
                       Diagrams.TwoD.Path.Metafont.Combinators
                       Diagrams.TwoD.Path.Metafont.Parser
  build-depends:       base >= 4.8 && < 4.22,
                       mtl >= 2.0 && < 2.4,
                       mtl-compat >= 0.2.1 && < 0.3,
                       containers > 0.4 && < 0.8,
                       split >= 0.2.1 && < 0.3,
                       colour >= 2.3.1 && < 2.4,
                       split >= 0.2.1 && < 0.3,
                       monoid-extras >= 0.4.2 && < 0.8,
                       diagrams-core >= 1.4 && < 1.6,
                       diagrams-lib >= 1.4 && < 1.6,
                       diagrams-solve >= 0.1 && < 0.2,
                       lens >= 4.0 && < 5.4,
                       linear >= 1.11.3 && < 1.24,
                       force-layout >= 0.4 && < 0.5,
                       data-default >= 0.8 && < 0.9,
                       MonadRandom >= 0.1.8 && < 0.7,
                       random >= 1.0 && < 1.4,
                       circle-packing >= 0.1 && < 0.2,
                       parsec >= 3.1 && < 3.2,
                       text >= 0.11 && < 2.2,
                       semigroups >= 0.3.4 && < 0.21,
                       cubicbezier >= 0.6 && < 0.7,
                       hashable >= 0.1.2 && < 1.6,
                       mfsolve >= 0.3 && < 0.4
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite turtle-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      src tests
  Main-is:             TestSuite.hs
  ghc-options:         -Wall

  other-modules:       Diagrams.TwoD.Path.Turtle.Tests
                       Diagrams.TwoD.Path.Turtle.Internal

  build-depends:       HUnit                      >= 1.2 && < 1.7,
                       QuickCheck                 >= 2.4 && < 2.17,
                       containers                 >= 0.3 && < 0.8,
                       test-framework             >= 0.4 && < 0.9,
                       test-framework-hunit       >= 0.2 && < 0.4,
                       test-framework-quickcheck2 >= 0.2 && < 0.4,

                       base >= 4.8 && < 5,
                       diagrams-lib >= 1.4 && < 1.6

  default-language:    Haskell2010
